--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "lintfix": "yarn lint:js --fix"
   },
   "dependencies": {
+    "bulma": "^0.9.4",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
+    "sass": "^1.56.2",
+    "sass-loader": "10",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
