--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "lintfix": "yarn lint:js --fix"
   },
   "dependencies": {
+    "@nuxt/content": "^1",
+    "@nuxtjs/date-fns": "^1.5.0",
     "bulma": "^0.9.4",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
