--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "lintfix": "yarn lint:js --fix"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@nuxt/content": "^1",
     "@nuxtjs/date-fns": "^1.5.0",
+    "@nuxtjs/fontawesome": "^1.1.2",
     "bulma": "^0.9.4",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
