--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "lintfix": "yarn lint:js --fix"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/vue-fontawesome": "^2.0.9",
     "@nuxt/content": "^1",
     "@nuxtjs/date-fns": "^1.5.0",
     "@nuxtjs/fontawesome": "^1.1.2",
