Bootstrapに乗り換え

--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "@nuxt/content": "^1",
     "@nuxtjs/date-fns": "^1.5.0",
     "@nuxtjs/fontawesome": "^1.1.2",
-    "bulma": "^0.9.4",
+    "bootstrap": "^5.2.3",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
     "nuxt-content-git": "^2.0.14",
     "prism-themes": "^1.9.0",
     "sass": "^1.56.2",
-    "sass-loader": "10",
+    "sass-loader": "^10.4.1",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
